Index.css
.MainScreen {
    max-width: 1280px;
    margin: 13px auto auto;
}

.Products {
    background-color: #262A32;
}

.PlusHoverButton {
    display: none;
    top: 96px;
    left: 24px;
    position: absolute;
    z-index: 9999;
}

.HeartHoverButton {
    display: none;
    top: 96px;
    right: 24px;
    position: absolute;
    z-index: 9999;
}

.PlusHoverButton:hover {
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
}

.HeartHoverButton:hover {
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
}

#LoadMoreButton {
    width: 264px;
    height: 38px;
    border-radius: 24px;
    border-width: 2px;
    color: #E4DED3;
    border-color: #E4DED3;
    background-color: transparent;

}

.BigWhiteText {
    font-size: 48px;
    color: #FFFFFF;
    font-weight: bold;
    line-height: 1.2;
    text-align: left;
}

.SummerText {
    font-size: 13px;
}

.SmalllerText {
    font-size: 16px;
    color: #FFFFFF;
    line-height: 1.2;
    text-align: left;
}

.TextOverImage {
    position: absolute;
}

.PopularItems {
    font-size: 48px;
    color: #FFFFFF;
    line-height: 1.2;
    text-align: center;
}

.PopularItems:after {
    display: inline-block;
    margin: 0 0 8px 20px;
    height: 2px;
    content: "";
    text-shadow: none;
    background-color: #3A3E45;
    width: 33%;
}

.PopularItems:before {
    display: inline-block;
    margin: 0 20px 8px 0;
    height: 2px;
    content: "";
    text-shadow: none;
    background-color: #3A3E45;
    width: 33%;
}

.ProductCard:hover > .card-body {
    opacity: 0.1;
}

.ProductCard:hover > .card-img-top {
    opacity: 0.1;
}

.ProductCard:hover > .PlusHoverButton {
    display: block;
}

.ProductCard:hover > .HeartHoverButton {
    display: block;
}

.ProductCard:hover {
    background-color: #34C97B;
}

.FeaturedLogo {
    font-size: 48px;
    font-family: "Lato";
    color: #FFFFFF;
    font-weight: bold;
    line-height: 1.2;
    text-align: center;
}

.FeaturedText {
    font-size: 18px;
    font-family: "Lato";
    color: #FFFFFF;
    font-weight: bold;
    line-height: 1.2;
    text-align: center;
}

#LeftArrow {
    padding-right: 250px;
}

#RightArrow {
    padding-left: 250px;
}

.FeatureProducts {
    color: #FFFFFF;
    line-height: 1.2;
    text-align: center;
}

